# assessor-agent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: ci.yml
docs/talk/: capture-list.md  captures.md  runbook.md  slides.html  slides.md
evals/adversarial/: 10k_findings.json  boundary_89d_vs_90d.json  duplicate_sid.json  empty_findings.json  evidence_injection.json  prompt_injection_row.json
evals/counterfactual/: generators.py
evals/golden/: case_001_baseline.json  case_002_dev_prod_sod.json  case_003_orphan_cluster.json  case_004_no_findings.json  case_005_mixed_severity.json  case_006_synth_500_principals.json  case_007_synth_boundary_89d.json  case_008_synth_boundary_91d.json  case_009_synth_dup_sids.json  case_010_synth_high_explicit.json
evals/property/: invariants.py
infra/step_functions/: pipeline.asl.json
infra/terraform/: backend.tf  event_source_mappings.tf  lambda-requirements.txt  locals.tf  main.tf  outputs.tf  tfplan  variables.tf  versions.tf
scripts/: __init__.py  eval_check.py  eval_pr_comment.js  eval_run.py  generate_canary_baseline.py  generate_golden.py  simulate_disagreement.py  synth_data.py
src/adversarial_probe/: handler.py  prompts.py
src/agent_narrator/: handler.py  prompts.py  tools.py
src/canary_orchestrator/: handler.py
src/citation_gate/: handler.py
src/drift_detector/: handler.py  ks_test.py
src/entity_grounding_gate/: entity_extraction.py  handler.py  negation_check.py
src/eval_harness/: adversarial_runner.py  bertscore_runner.py  counterfactual_runner.py  ddb_writer.py  golden_loader.py  metrics.py  ragas_runner.py  reporter.py  runner.py
src/extract_uar/: access_logic.py  connection.py  csv_codec.py  csv_writer.py  handler.py  legacy.py  sql_queries.py
src/generate_pdf/: handler.py  (+1 more)
tests/: conftest.py
(+145 files in other folders)
