[project]
name = "assessor-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.6",
    "aws-lambda-powertools>=3.0",
    "boto3>=1.34",
    "pymssql>=2.3",
    "strands-agents>=1.0",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "moto>=5.0",
    "ruff>=0.5",
    "pyright>=1.1",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=src --cov-report=term-missing --cov-report=xml"
